--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 
 # Generate XML
 grep DWIDTH ../adfrescue/test/Disk1/Fonts/Times.bdf | awk 'BEGIN { x=0; id=32; print "<font>\n<info face=\"Times\" size=\"18\"/>\n<common lineHeight=\"18\" base=\"14\"/>" } { print "<char id=\"" id "\" x=\"" x "\" y=\"0\" width=\"" $2 "\" xadvance=\"" $2 "\" height=\"18\" xoffset=\"0\" yoffset=\"0\"></char>"; x=x+$2; id+=1 } END { print "</font>" }' > Times.xml
+
 grep DWIDTH ../adfrescue/test/Disk1/Fonts/JOY.bdf | awk 'BEGIN { x=0; id=0; print "<font>\n<info face=\"JOY\" size=\"6\"/>\n<common lineHeight=\"6\" base=\"5\"/>" } { print "<char id=\"" id "\" x=\"" x "\" y=\"0\" width=\"" $2 "\" xadvance=\"" $2 "\" height=\"6\" xoffset=\"0\" yoffset=\"0\"></char>"; x=x+$2; id+=1 } END { print "</font>" }' > JOY.xml
+grep DWIDTH ../adfrescue/test/Disk1/Fonts/JOY2.bdf | awk 'BEGIN { x=0; id=0; print "<font>\n<info face=\"JOY2\" size=\"9\"/>\n<common lineHeight=\"9\" base=\"9\"/>" } { print "<char id=\"" id "\" x=\"" x "\" y=\"0\" width=\"" $2 "\" xadvance=\"" $2 "\" height=\"9\" xoffset=\"0\" yoffset=\"0\"></char>"; x=x+$2; id+=1 } END { print "</font>" }' > JOY2.xml
+
+grep DWIDTH ../adfrescue/test/Disk1/Fonts/64erI.bdf | awk 'BEGIN { x=0; id=32; print "<font>\n<info face=\"64erI\" size=\"8\"/>\n<common lineHeight=\"8\" base=\"8\"/>" } { print "<char id=\"" id "\" x=\"" x "\" y=\"0\" width=\"" $2 "\" xadvance=\"" $2 "\" height=\"8\" xoffset=\"0\" yoffset=\"0\"></char>"; x=x+$2; id+=1 } END { print "</font>" }' > 64erI.xml
+grep DWIDTH ../adfrescue/test/Disk1/Fonts/64erII.bdf | awk 'BEGIN { x=0; id=32; print "<font>\n<info face=\"64erII\" size=\"8\"/>\n<common lineHeight=\"8\" base=\"8\"/>" } { print "<char id=\"" id "\" x=\"" x "\" y=\"0\" width=\"" $2 "\" xadvance=\"" $2 "\" height=\"8\" xoffset=\"0\" yoffset=\"0\"></char>"; x=x+$2; id+=1 } END { print "</font>" }' > 64erII.xml
